--- a/src/scss-partial/_variables.scss
+++ b/src/scss-partial/_variables.scss
@@ -1,10 +1,12 @@
-/*********************************************\ 
-  variables 
-\*********************************************/
-// fonts
+////
+/// scss-partial _variables.scss
+////
+
+/// Fonts
 $font-main: 'Roboto', sans-serif;
 $font-head: 'Zilla Slab Highlight', sans-serif;
-// colors
+
+/// Colors
 $green-main: #005850;
 $red-error: #d62828;
 $light-contrast: #d8d8d8;
