--- a/src/component-landing/main.scss
+++ b/src/component-landing/main.scss
@@ -5,7 +5,7 @@
 /// @use
 @use '../scss-partial/index.scss' as *;
 
-/* Base style classes */
+/* Base classes */
 .container {
   position: fixed;
   height: 100vh;
