--- a/src/component-landing/main.scss
+++ b/src/component-landing/main.scss
@@ -2,7 +2,7 @@
   component-landing main.scss
 \**************************************************/
 
-/// @use
+// @use
 @use '../scss-partial/index.scss' as *;
 
 /* Base classes */
