--- a/src/scss-global/_base.scss
+++ b/src/scss-global/_base.scss
@@ -2,7 +2,7 @@
   scss-global _base.scss
 \**************************************************/
 
-/// @use
+// @use
 @use '../scss-partial/index.scss' as *;
 
 * {
