--- a/src/scss-global/_noscript.scss
+++ b/src/scss-global/_noscript.scss
@@ -2,7 +2,7 @@
   scss-global _noscript.scss
 \**************************************************/
 
-/// @use
+// @use
 @use '../scss-partial/index.scss' as *;
 
 noscript {
