--- a/src/scss-global/index.scss
+++ b/src/scss-global/index.scss
@@ -1,8 +1,8 @@
-////
-/// scss-global index.scss
-////
+//**************************************************
+// scss-global index.scss
+//**************************************************
 
-/// @use 
+// @use
 @use './fonts.scss';
 @use './base.scss';
 @use './noscript.scss';
