--- a/src/scss-partial/_variables.scss
+++ b/src/scss-partial/_variables.scss
@@ -1,12 +1,12 @@
-////
-/// scss-partial _variables.scss
-////
+//**************************************************
+// scss-partial _variables.scss
+//**************************************************
 
-/// Fonts
+// Fonts
 $font-main: 'Roboto', sans-serif;
 $font-head: 'Zilla Slab Highlight', sans-serif;
 
-/// Colors
+// Colors
 $green-main: #005850;
 $red-error: #d62828;
 $light-contrast: #d8d8d8;
