--- a/src/scss-partial/_mixins.scss
+++ b/src/scss-partial/_mixins.scss
@@ -1,11 +1,11 @@
-////
-/// scss-partial _mixins.scss
-////
+//**************************************************
+// scss-partial _mixins.scss
+//**************************************************
 
-/// @use
+// @use
 @use './variables.scss' as *;
 
-/// @media height
+// @media height
 @mixin height600 {
   @media (min-height: 600px) {
     @content;
@@ -52,7 +52,7 @@
   }
 }
 
-/// @media width
+// @media width
 @mixin width500 {
   @media (min-width: 500px) {
     @content;
@@ -99,14 +99,14 @@
   }
 }
 
-/// @media orientation
+// @media orientation
 @mixin landscape {
   @media (orientation: landscape) {
     @content;
   }
 }
 
-/// Error paragraph
+// Error paragraph
 @mixin errorParagraph($font500, $font700, $font900) {
   text-align: center;
   color: $red-error;
