--- a/src/scss-global/_base.scss
+++ b/src/scss-global/_base.scss
@@ -16,6 +16,10 @@ body {
   font-family: $v_font-main;
 }
 
+button {
+  font-family: inherit;
+}
+
 a {
   text-decoration: none;
   color: inherit;
