--- a/src/scss-partial/_variables.scss
+++ b/src/scss-partial/_variables.scss
@@ -3,7 +3,7 @@
 //**************************************************
 
 // Fonts
-$font-main: 'Roboto', sans-serif;
+$font-main: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Ubuntu', 'Cantarell', 'Noto Sans', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji', sans-serif;
 $font-head: 'Zilla Slab Highlight', sans-serif;
 
 // Colors
